Fix: Prevented the column gap from being applied to the Editor's Choice Plugin

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -946,7 +946,7 @@ html {
     --itemColumnGap: 0.5em;
 }
 
-.itemsContainer {
+.itemsContainer:not(.editorsChoiceItemsContainer) {
     column-gap: var(--itemColumnGap);
 }
 
